# django-nuxt-docker

./: Makefile  README.md  docker-compose.dev.yml
app/: Dockerfile.dev
app/etc/envs/: .env.dev
app/etc/supervisor.d/: django.conf
app/src/: pyproject.toml
app/src/config/: settings.py
nginx/: Dockerfile
nginx/etc/conf.d/: default.conf
postgres/: .env.example
web/: Dockerfile.dev
web/etc/: supervisord.conf
web/etc/supervisor.d/: nuxt.conf
web/src/: package.json
